# aeon

./: .gitignore  .mcp.json  AEON_CORE_COMPREHENSIVE_EVALUATION.md  AEON_FRONTEND_COMPREHENSIVE_EVALUATION.md  AEON_INSTRUMENT_BENCHMARKS.md  AEON_INSTRUMENT_COMPILATION_REPORT.md  AEON_INSTRUMENT_COMPREHENSIVE_EVALUATION.md  AEON_INSTRUMENT_READINESS.md  AEON_INSTRUMENT_TRACE_FORMAT.md  AEON_INSTRUMENT_WORKSTREAM_SUMMARY.md  AEON_JIT_COMPREHENSIVE_EVALUATION.md  AEON_JIT_EVALUATION.md  AEON_JIT_FIX_SUMMARY.md  AEON_JIT_TEST_PARALLELIZATION.md  AEON_PROJECT_EVALUATION_SUMMARY.md  AEON_REDUCE_COMPREHENSIVE_EVALUATION.md  AEON_SWARM_COMPREHENSIVE_EVALUATION.md  COMMIT_SUMMARY.md  CORRIDOR_OPTIMIZATION_ROADMAP.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_SUITE.md  EXTENDED_SESSION_FINAL_REPORT.md  FLAKY_TEST_ANALYSIS.md  HASH_TRACING_EXAMPLE.md  MCP_INTEGRATION_TESTS_SUMMARY.md  PATTERN_RECOGNITION_GUIDE.md  PHASE_2B_COVERAGE_REPORT.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_FINAL_REPORT.md  PHASE_2_OPTIMIZATION_PROGRESS.md  PHASE_2_PERFORMANCE_ANALYSIS.md  PHASE_2_RECOMMENDATION.md  PHASE_2_TESTING_PLAN.md  PHASE_2_WORKSTREAM_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  README.md  SESSION_COMPLETION_REPORT.md  SESSION_REPORT_APR20.md  (+11 more)
bins/: 0a8a78ae_nmsscr.nmss  f5966e1c_nmsskc.nmss
crates/aeon/: Cargo.toml
crates/aeon-frontend/: Cargo.toml
crates/aeon-frontend/src/: http.rs  lib.rs  main.rs  mcp.rs  service.rs
crates/aeon-frontend/tests/: advanced_emulation.rs  blackboard_propagation.rs  emulation_integration.rs  mcp_error_cases.rs  mcp_integration.rs  mcp_tools_core.rs  mcp_tools_inspection.rs  mcp_tools_query.rs
crates/aeon-instrument/: Cargo.toml
crates/aeon-instrument/benches/: engine_benchmarks.rs
crates/aeon-instrument/examples/: aarch64_branch_bridge_harness.c  aarch64_branch_bridge_tail_harness.c  aarch64_resume_trampoline_harness.c  batch_processing_example.rs  cache_benchmark.rs  frida_trace.rs  il_snapshot_replay.rs
crates/aeon-instrument/src/: callbacks.rs  context.rs  dyncfg.rs  dynffi.rs  dynruntime.rs  engine.rs  lib.rs  parallel_cfg.rs  snapshot.rs  symbolic.rs  symbolic_cache.rs  trace.rs  translate.rs
crates/aeon-instrument/tests/: engine_integration.rs  integration_callbacks.rs  integration_tests.rs
crates/aeon-jit/: Cargo.toml
crates/aeon-jit/examples/: dump_printf_bridge_asm.rs
crates/aeon-jit/samples/: conditional_branch.c  hash_crc32_aarch64.c  hash_fnv1a_aarch64.c  hash_sha256_test  hash_sha256_test.c  hash_siphash_aarch64.c  loop_simple.c  memory_array.c  trace_sha256.rs
crates/aeon-jit/src/: lib.rs
crates/aeon-jit/tests/: native_smoke.rs  roundtrip.rs
crates/aeon-swarm/: Cargo.toml
crates/aeon-swarm/src/: agent.rs  blackboard.rs  bridge.rs  claude.rs  coordinator.rs  lib.rs  report.rs  roles.rs  types.rs
crates/aeon-swarm/tests/: agent_runner_test.rs  bridge_test.rs  coordinator_test.rs
crates/aeon/src/: analysis.rs  api.rs  components.rs  coverage.rs  datalog.rs  elf.rs  emulation.rs  engine.rs  facts.rs  function_ir.rs  hook_engine.rs  il.rs  il_store.rs  instrumentation.rs  lib.rs  lifter.rs  object_layout.rs  pointer_analysis.rs  rc4_search.rs  resource_limits.rs  rewriter.rs  sandbox.rs  xref_graph.rs  xref_scan.rs
docs/: ANALYST_GUIDE.md  CODE_QUALITY_ANALYSIS.md  DEPLOYMENT.md  PERFORMANCE_GUIDE.md  QUICKSTART.md  README.md  TOOL_DEVELOPMENT.md  TROUBLESHOOTING.md  advanced-workflows.md  analysis-workflows.md  goal_state_2026-04-09.md  implementation-plan.md  next-steps.md  (+8 more)
src/: elf.rs  (+7 more)
(+161 files in other folders)
