[package]
name = "aeon-instrument"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
aeon = { path = "../aeon" }
aeonil = { path = "../aeonil" }
aeon-jit = { path = "../aeon-jit" }
aeon-reduce = { path = "../aeon-reduce" }
bad64 = "0.6"
bincode = "1"
libc = "0.2"
rayon = "1.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object = { version = "0.36", default-features = false, features = ["read", "build", "std"] }

[dev-dependencies]
libc = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_benchmarks"
harness = false
