[package]
name = "aeon-swarm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aeon-swarm"
path = "src/bin/aeon_swarm.rs"

[dependencies]
aeon-frontend = { path = "../aeon-frontend" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockito = "1.2"
