[package]
name = "aeon"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.13"
ascent = "0.7"
bad64 = "0.6"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
gimli = { version = "0.31", default-features = false, features = ["read"] }
